<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SugerCRM</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_sub">SubActivity</string>
    <string name="next">Next</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="search_movies">Search Movies</string>

    <string-array name="drawer_list">
        <item>Item 1</item>
        <item>Item 2</item>
        <item>Item 3</item>
        <item>Item 4</item>
        <item>Item 5</item>
        <item>Item 6</item>
        <item>Item 7</item>
        <item>Item 8</item>
        <item>Item 9</item>
    </string-array>

    <string name="get_url">Enter Your URL</string>
    <string name="login_layout">Login</string>
    <string name="action_logout">Logout</string>
    <string name="spinner_prompt">spinner_prompt</string>
    <string name="Save">Save</string>
    <string name="Description">Description</string>
    <string name="Cancel">Cancel</string>
    <string name="subject">Subject</string>
    <string name="start_date">Start Date</string>
    <string name="dateView">---- / -- / --</string>
    <string name="endDate">End Date</string>

    <string-array name="drawer_titles">

        <item name="Account">Account</item>
        <item name="contacts">Contacts</item>
        <item name="leads">Leads</item>
        <item name="opportunities">Opportunities</item>
        <item name="cases">Cases</item>
        <item name="calls">Calls</item>
        <item name="Meetings">Meetings</item>
        <item name="about">About</item>
        <item name="settings">Settings</item>
        <item name="logOut">Log Out</item>
    </string-array>

</resources>
