<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity">
    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        android:icon="@drawable/settings"
        app:showAsAction="never" />
    <item
        android:id = "@+id/action_logout"
        android:title="@string/action_logout"
        android:orderInCategory="100"
        android:icon="@drawable/logout"
        app:showAsAction="never"></item>

    <item android:id="@+id/action_addNewAccount"
        android:title="@string/next"
        android:orderInCategory="200"
        android:icon="@drawable/plus"
        app:showAsAction="always"/>

</menu>
